# datamemo1

./: .gitignore  README.md
YouTubeData-Collector/: README.md  pyproject.toml  setup.cfg
YouTubeData-Collector/example-notebooks/analysis/: example.ipynb
YouTubeData-Collector/example-notebooks/data-collection/: example.ipynb
YouTubeData-Collector/youtubecollector/: __init__.py  data_utils.py  proc_utils.py  utils.py  ytcollector.py  ytcollector_class.py
main-analysis/: analysis.R  data-collection.ipynb
main-analysis/data/: channels.xlsx  videos.csv
